prod/infrastructure/longhorn-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
spec:
  parentRefs:
    - name: traefik
      namespace: traefik
  hostnames:
    - "longhorn.korab.space"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: longhorn-frontend
          port: 80
