prod/infrastructure/prometheus-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  parentRefs:
    - name: traefik
      namespace: traefik
  hostnames:
    - "prometheus.korab.space"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kps-kube-prometheus-stack-prometheus
          port: 9090
